--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@watchedcom/sdk": "^0.33.0",
     "cheerio": "^1.0.0-rc.3",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "rxjs": "^6.6.0"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.21",
