--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "watched-addon-example",
+  "name": "mediaurl-example",
   "version": "0.0.0",
   "main": "dist",
   "scripts": {
@@ -9,20 +9,20 @@
     "test": "jest test/"
   },
   "dependencies": {
-    "@watchedcom/sdk": "^0.33.0",
-    "cheerio": "^1.0.0-rc.3",
-    "node-fetch": "^2.6.0",
-    "rxjs": "^6.6.0"
+    "@mediaurl/sdk": "1.0.0",
+    "cheerio": "1.0.0-rc.3",
+    "node-fetch": "^2.6.1",
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.21",
-    "@types/node-fetch": "^2.5.7",
-    "husky": "^4.2.5",
-    "jest": "^26.1.0",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.6"
+    "@types/cheerio": "^0.22.23",
+    "@types/node-fetch": "2.5.7",
+    "husky": "^4.3.7",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
