--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest test/"
   },
   "dependencies": {
-    "@mediaurl/sdk": "1.0.0",
+    "@mediaurl/sdk": "^1.0.1",
+    "@types/node": "^14.14.20",
     "cheerio": "1.0.0-rc.3",
     "node-fetch": "^2.6.1",
     "rxjs": "^6.6.3"
