--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "test": "jest test/"
   },
   "dependencies": {
-    "@mediaurl/sdk": "^1.0.1",
+    "@mediaurl/sdk": "^1.1.0",
     "cheerio": "1.0.0-rc.3",
     "node-fetch": "^2.6.1",
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.23",
-    "@types/node": "^14.14.20",
-    "@types/node-fetch": "2.5.7",
-    "husky": "^4.3.7",
+    "@types/node": "^14.14.21",
+    "@types/node-fetch": "^2.5.8",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
