--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "tsc",
     "start": "node .",
     "develop": "ts-node-dev --transpile-only --no-notify src",
-    "test": "jest test/"
+    "test": "jest test/",
+    "prepare": "npx simple-git-hooks"
   },
   "dependencies": {
     "@mediaurl/sdk": "^2.0.0",
@@ -18,17 +19,15 @@
     "@types/cheerio": "^0.22.24",
     "@types/node": "^14.14.28",
     "@types/node-fetch": "^2.5.10",
-    "husky": "^5.0.9",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.3.1",
+    "simple-git-hooks": "^2.4.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
     "*.{js,ts,tsx,css,md}": [
