--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@mediaurl/sdk": "^2.0.0",
-    "cheerio": "1.0.0-rc.3",
+    "cheerio": "^1.0.0-rc.10",
     "node-fetch": "^2.6.1",
+    "puppeteer-core": "^10.0.0",
+    "puppeteer-extra": "^3.1.18",
+    "puppeteer-extra-plugin-block-resources": "^2.2.9",
+    "puppeteer-extra-plugin-stealth": "^2.7.8",
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.24",
+    "@types/cheerio": "^0.22.29",
     "@types/node": "^14.14.28",
     "@types/node-fetch": "^2.5.10",
     "jest": "^26.6.3",
